# bevy_wgsl_particles

./: Cargo.toml  LICENSE-MIT  README.md
.cargo/: config.toml
assets/shaders/: basic.wgsl  compute.wgsl
examples/: basic.rs
src/: compute.rs  lib.rs  mesh.rs  particle.rs  particle.wgsl
