[package]
name = "bevy_wgsl_particles"
version = "0.16.0"
authors = ["Josiah Putman"]
edition = "2021"
rust-version = "1.90.0"
description = "GPU particle system for the Bevy game engine"
repository = "https://github.com/katsutoshii/bevy_wgsl_particles"
homepage = "https://github.com/katsutoshii/bevy_wgsl_particles"
documentation = "https://docs.rs/bevy_wgsl_particles"
keywords = ["bevy", "particle-system", "particles", "vfx"]
license = "MIT OR Apache-2.0"
readme = "README.md"
autoexamples = false


[dependencies]
bytemuck = { version = "1.5", features = ["derive", "must_cast"] }
fixedbitset = "0.5"
copyless = "0.1"
rand = "0.8"
rand_pcg = "0.3"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
ron = "0.8"
bitflags = "2.3"
typetag = { version = "0.2", optional = true }
thiserror = "2"
wgpu = { version = "24", default-features = false, features = [
    "wgsl",
    "dx12",
    "metal",
    "naga-ir",
    "fragile-send-sync-non-atomic-wasm",
] }
naga = { version = "24", features = ["wgsl-in"] }
naga_oil = { version = "0.17", default-features = false, features = [
    "test_shader",
] }

[dependencies.bevy]
version = "0.16"
default-features = false
features = [
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_asset",
    "bevy_log",
    "x11",
]


[dev-dependencies]
bevy = { version = "0.16", default-features = true }

[[example]]
name = "basic"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
strip = "debuginfo"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
debug = false
opt-level = 3
