[package]
name = "bevy_wgsl_particles"
version = "0.16.0"
authors = ["Josiah Putman"]
edition = "2021"
rust-version = "1.90.0"
description = "GPU particle system for the Bevy game engine"
repository = "https://github.com/katsutoshii/bevy_wgsl_particles"
homepage = "https://github.com/katsutoshii/bevy_wgsl_particles"
documentation = "https://docs.rs/bevy_wgsl_particles"
keywords = ["bevy", "particle-system", "particles", "vfx"]
license = "MIT OR Apache-2.0"
readme = "README.md"
autoexamples = false


[dependencies]
rand = "0.8"
rand_pcg = "0.3"

[dependencies.bevy]
version = "0.16"
default-features = false
features = [
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_asset",
    "bevy_log",
    "x11",
]


[dev-dependencies]
bevy = { version = "0.16", default-features = true, features = [
    "file_watcher",
] }

[[example]]
name = "basic"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
strip = "debuginfo"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
debug = false
opt-level = 3
