[package]
name = "bevy_wgsl_particles"
version = "0.19.0"
authors = ["Josiah Putman"]
edition = "2021"
description = "GPU particle system for the Bevy game engine"
repository = "https://github.com/katsutoshii/bevy_wgsl_particles"
homepage = "https://github.com/katsutoshii/bevy_wgsl_particles"
documentation = "https://docs.rs/bevy_wgsl_particles"
keywords = ["bevy", "particle-system", "particles", "vfx"]
license = "MIT OR Apache-2.0"
readme = "README.md"
autoexamples = false


[dependencies]
bevy = { version = "0.19", default-features = false, features = [
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_asset",
    "bevy_log",
    "x11",
] }

rand = { version = "0.8" }
rand_pcg = { version = "0.3" }
[dev-dependencies]
bevy = { version = "0.19", default-features = true, features = [
    "file_watcher",
    "dynamic_linking",
] }

[[example]]
name = "basic"
